--- a/js_classes/index.html
+++ b/js_classes/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Default Parameters</title>
+    <title>Js Class</title>
     <script src="js/script.js"></script>
-    <script src="js/practice.js"></script>
+    <script src="js/employee.js"></script>
 </head>
 <body>
-    <input type="number" onkeyup="disNum()" name="" id="getNm">
+    
 </body>
 </html>
